@@ -25,7 +25,7 @@
 		<version>24</version>
 	</parent>
 	<groupId>org.apache.systemds</groupId>
-	<version>3.3.0-SNAPSHOT</version>
+	<version>3.4.0-SNAPSHOT</version>
 	<artifactId>systemds</artifactId>
 	<packaging>jar</packaging>
 	<name>Apache SystemDS</name>
@@ -67,7 +67,7 @@
 		<!-- aws-java-sdk-bundle version should align with hadoop-aws version -->
 		<!-- aws-java-sdk-bundle.version>1.12.367</aws-java-sdk-bundle.version -->
 		<!-- Set java compile level via argument, ex: 1.8 1.9 10 11-->
-		<java.level>11</java.level>
+		<java.level>17</java.level>
 		<java.version>{java.level}</java.version>
 		<!-->Testing settings<!-->
 		<maven.test.skip>false</maven.test.skip>
@@ -77,10 +77,22 @@
 		<test-forkCount>1C</test-forkCount>
 		<rerun.failing.tests.count>2</rerun.failing.tests.count>
 		<jacoco.skip>false</jacoco.skip>
+		<doc.skip>false</doc.skip>
 		<jacoco.include>**</jacoco.include>
 		<automatedtestbase.outputbuffering>false</automatedtestbase.outputbuffering>
 		<argLine>-Xms3000m -Xmx3000m -Xmn300m</argLine>
 		<enableStats>false</enableStats>
+
+		<!-- Dependent on Spark open to access deprecated api components from <= Java 11. Should be removed once Spark updates fully to Java 17 -->
+		<jvm.addopens>
+			--add-opens=java.base/java.nio=ALL-UNNAMED 
+			--add-opens=java.base/java.io=ALL-UNNAMED 
+			--add-opens=java.base/java.util=ALL-UNNAMED 
+			--add-opens=java.base/java.lang=ALL-UNNAMED 
+			--add-opens=java.base/java.lang.ref=ALL-UNNAMED
+			--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+			--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+		</jvm.addopens>
 	</properties>
 
 	<repositories>
@@ -367,6 +379,9 @@
 					<systemPropertyVariables>
 						<log4j.configurationFile>file:src/test/resources/log4j.properties</log4j.configurationFile>
 					</systemPropertyVariables>
+					<argLine>
+						@{argLine} ${jvm.addopens}
+					</argLine>
 				</configuration>
 			</plugin>
 
@@ -433,7 +448,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.10</version>
+				<version>0.8.12</version>
 				<configuration>
 					<includes>
 						<include>${jacoco.include}</include>
@@ -444,7 +459,19 @@
 						<fileSet>
 							<directory>${project.build.directory}</directory>
 							<includes>
-								<include>*/jacoco.exec</include>
+								<include>*.exec</include>
+							</includes>
+						</fileSet>
+						<fileSet>
+							<directory>${project.build.directory}</directory>
+							<includes>
+								<include>transient_jacoco**/*.exec</include>
+							</includes>
+						</fileSet>
+						<fileSet>
+							<directory>${project.build.directory}</directory>
+							<includes>
+								<include>federated_jacoco/*.exec</include>
 							</includes>
 						</fileSet>
 					</fileSets>
@@ -875,9 +902,9 @@
 						<configuration>
 							<excludePackageNames>*.protobuf</excludePackageNames>
 							<notimestamp>true</notimestamp>
-							<failOnWarnings>true</failOnWarnings>
+							<failOnWarnings>false</failOnWarnings>
 							<quiet>true</quiet>
-							<skip>false</skip>
+							<skip>${doc.skip}</skip>
 							<show>public</show>
 							<source>${java.level}</source>
 						</configuration>
